--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.1",
 		"react-toastify": "^6.0.4",
-		"styled-components": "^5.1.0",
+		"styled-components": "4.3.2",
 		"styled-reset": "^4.1.4"
 	},
 	"scripts": {
@@ -39,6 +39,5 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	},
-	"homepage": "https://cloninggram.netlify.app/#/"
+	}
 }
