--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@apollo/client": "^3.1.3",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
-		"apollo-boost": "^0.4.9",
 		"axios": "^0.19.2",
-		"graphql": "^15.0.0",
+		"graphql": "^15.3.0",
 		"react": "^16.13.1",
 		"react-apollo-hooks": "^0.5.0",
 		"react-autosize-textarea": "^7.0.0",
@@ -18,7 +18,8 @@
 		"react-scripts": "3.4.1",
 		"react-toastify": "^6.0.4",
 		"styled-components": "4.3.2",
-		"styled-reset": "^4.1.4"
+		"styled-reset": "^4.1.4",
+		"subscriptions-transport-ws": "^0.9.17"
 	},
 	"scripts": {
 		"start": "react-scripts start",
