--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
+		"@types/react": "^16.9.56",
 		"axios": "^0.19.2",
 		"graphql": "^15.3.0",
 		"react": "^16.13.1",
@@ -15,7 +16,7 @@
 		"react-dom": "^16.13.1",
 		"react-helmet": "^6.0.0",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "3.4.1",
+		"react-scripts": "3.4.3",
 		"react-toastify": "^6.0.4",
 		"styled-components": "4.3.2",
 		"styled-reset": "^4.1.4",
